--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:  Yucan
 header-img: "img/autumn2.jpg"
-tagline: "吉光片羽"  
+tagline: "风中等风来"  
 description: "风中等风来"  
 baseurl: ""
 url: "http://yucan.win"  
@@ -14,7 +14,7 @@ owner:
   bio: "用舍由時，行藏在我。袖手何妨閑處看。"
 
 # Data
-gavatar: http://dreamofbook.qiniudn.com/Az..png
+gavatar: http://o7v1v0rr4.bkt.clouddn.com/IMG_0754.jpg
 favicon: img/favicon.ico
 
 douban_username: 56816118
