add email; del douban; al copyright

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ github_username: zhyucan
 facebook_username: zhyucan  
 weibo_username: 123152014  
 zhihu_username: yucan  
+email_username: zhyucan@gmail.com
 
 # Build settings  
 # use Github Flavored Markdown !important  
