--- a/_config.yml
+++ b/_config.yml
@@ -60,11 +60,11 @@ defaults:
 
 # Comments 
 comments :
-  provider : duoshuo
+  provider : disqus
   duoshuo :
     short_name : Yucan
   disqus :
-      short_name : Yucan
+    short_name : Yucan
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-78450750-1
