--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ comments :
   duoshuo :
     short_name : Yucan
   disqus :
-    short_name : Yucan
+    short_name : zhyucan
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-78450750-1
